# OmniOpt

./: .colorfunctions.sh  .dockerignore  .gitignore  .helpers.py  .omniopt.py  .omniopt_plot_cpu_ram_usage.py  .omniopt_plot_general.py  .omniopt_plot_get_next_trials.py  .omniopt_plot_kde.py  .omniopt_plot_scatter.py  .omniopt_plot_scatter_generation_method.py  .omniopt_plot_scatter_hex.py  .omniopt_plot_time_and_exit_code.py  .omniopt_plot_trial_index_result.py  .omniopt_plot_worker.py  .pareto.py  .random_generator.py  .shellscript_functions  .tpe.py  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  README.md  SECURITY.md  docker-compose.yml  evaluate-run.sh  omniopt  omniopt_docker  omniopt_plot  omniopt_share  pyproject.toml  requirements.txt  run.sh  sbatch.pl  setup.py  test_requirements.txt
ax/: .___omni_plot_scatter_hex.py  ._omniopt_plot_scatter_3d.py  .find_interesting_points.py  .general.sh  .gitignore  .helpers.py  .main.py  .omniopt.py  .omniopt_plot.py  .omniopt_plot_3d.py  .omniopt_plot_cpu_ram_usage.py  .omniopt_plot_general.py  .omniopt_plot_get_next_trials.py  .omniopt_plot_gpu_usage.py  .omniopt_plot_kde.py  .omniopt_plot_parallel.py  .omniopt_plot_scatter.py  .omniopt_plot_scatter_generation_method.py  .omniopt_plot_scatter_hex.py  .omniopt_plot_time.py  .omniopt_plot_time_and_exit_code.py  .omniopt_plot_trial_index_result.py  .omniopt_plot_worker.py  .plot.py  .shellscript_functions  Dockerfile  README.md  apt-dependencies.txt  docker  docker-compose.yml  evaluate-run  hpopt.py  main  main.py  omniopt  omniopt_docker  omniopt_evaluate  omniopt_plot  plot  (+11 more)
(+19741 files in other folders)
